some todo view improvements

--- a/style.css
+++ b/style.css
@@ -14,9 +14,13 @@ span.tododates { font-size: x-small; padding-left: 3px; padding-right: 3px; marg
 span.todostarted {  }
 span.tododue {  }
 span.todooverdue { background:#EAA; }
-span.todopri { background:#EAA; font-weight:bold; padding:0 2px; margin-right:4px; }
-span.todolabel { background:#EAA; font-weight:bold; padding:0 2px; margin-right:4px; }
+span.todopri { background:#EAA; color:white; font-weight:bold; padding:0 2px; margin-right:2px; }
+span.todolabel { background:yellowgreen; color:yellow; font-weight:normal; padding:1px 4px; margin-right:2px; font-size:78%; }
 span.todoredo { color:#EAA; font-weight:bold; margin-right:0px; }
-span.todoat { color:grey; margin-right:4px; }
-span.tododate { color:grey; margin-right:4px; }
+span.todoat { color:grey; margin-right:2px; font-size:87%; font-stretch: ultra-condensed; }
+span.tododate { color:grey; margin-right:2px; font-size:5px; }
+
+.todocheckbox { background:red; border:1px solid red; }
+.todoaskoredo { background:red; border:1px solid red; }
+
 /* */
